--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <title>Calculator</title>
 </head>
 <div>
-  <div class="Calculator"></div>
+  <div class="Calculator"> Calculator</div>
   <input type="text" placeholder="0" id ="inputBox">
   <div>
     <button class="oprater">AC</button>
